--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shared_preferences: ^0.5.12+2
+  email_validator: ^1.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
