--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
 {
-  "name": "witter",
-  "version": "0.0.0",
+  "name": "anytext-demo",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "if [[ $NODE_ENV == 'production' ]]; then node ./bin/www; else nodemon ./bin/www; fi"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "async": "^2.5.0",
+    "debug": "^4.2.0",
+    "formidable": "^1.1.1",
+    "light-http-server": "^1.0.10",
+    "pug": "^2.0.0-rc.4",
+    "typingdnaclient": "^1.0.0"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.6"
-  }
+  "description": "Basic implementation of typing pattern verification with TypingDNA.",
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TypingDNA/Demos.git"
+  },
+  "keywords": [
+    "logind",
+    "demo",
+    "typingdna"
+  ],
+  "author": "Stefan Endres",
+  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/TypingDNA/Demos/issues"
+  },
+  "homepage": "https://github.com/TypingDNA/Demos#readme"
 }
